--- a/LangChat/Base.lproj/Main.storyboard
+++ b/LangChat/Base.lproj/Main.storyboard
@@ -23,6 +23,7 @@
                     <navigationBar key="navigationBar" contentMode="scaleToFill" id="Hhc-Cd-4fH">
                         <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
+                        <color key="barTintColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                     </navigationBar>
                     <nil name="viewControllers"/>
                     <connections>
